<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#feb209"
    android:orientation="vertical"
    tools:context=".user.view.RegistrateActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15.7dp"
        android:layout_marginRight="15.7dp"
        android:orientation="vertical">

        <include
            android:id="@+id/id_toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="680dp"
            android:layout_below="@+id/id_toolbar"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/white_cueve_bg" />
            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="20.7dp"
                android:paddingLeft="20.7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/regTxtTitulo"
                    android:textColor="#030303"
                    android:visibility="invisible"
                    android:layout_gravity="center"
                    android:textSize="21.3sp" />

                <EditText
                    android:id="@+id/regTxtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/grey_cursor_color"
                    android:textSize="15sp"
                    android:hint="@string/regTxtNombre"/>
                <EditText
                    android:id="@+id/regTxtApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/grey_cursor_color"
                    android:textSize="15sp"
                    android:hint="@string/regTxtApellidos"/>
                <EditText
                    android:id="@+id/regTxtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/grey_cursor_color"
                    android:textSize="15sp"
                    android:inputType="number"
                    android:hint="@string/regTxtTelefono"/>
                <EditText
                    android:id="@+id/regTxtDireccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/grey_cursor_color"
                    android:textSize="15sp"
                    android:hint="@string/regTxtDireccion"/>
                <EditText
                    android:id="@+id/regTxtCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/grey_cursor_color"
                    android:textSize="15sp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/regTxtCorreo"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/regTxtClave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/grey_cursor_color"
                        android:textSize="15sp"
                        android:inputType="textPassword"
                        android:hint="@string/regTxtClave"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                    <EditText
                        android:id="@+id/regTxtClaveConf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/grey_cursor_color"
                        android:textSize="15sp"
                        android:inputType="textPassword"
                        android:hint="@string/regTxtClaveConf"/>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <Button
                        android:id="@+id/regBtnRegistrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/regBtnRegistrar"
                        android:textAllCaps="false"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>
</ScrollView>