<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#feb209"
    android:orientation="vertical"
    tools:context=".user.view.LyLogin">

    <include
        android:id="@+id/id_toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15.7dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15.7dp"
        android:layout_below="@+id/id_toolbar"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="444dp"
                android:background="@drawable/white_cueve_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20.7dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/logTxtTitulo"
                        android:textColor="#030303"
                        android:visibility="invisible"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:textSize="21.3sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/logTxtCorreo"
                        android:textColor="#c2c2c2"
                        android:textSize="13.3sp" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/txtUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/poppins_semibold"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@drawable/grey_cursor_color"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginTop="6.3dp"
                        android:layout_marginRight="44.3dp"
                        android:background="#d5d5d5" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30.3dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/logTxtClave"
                        android:textColor="#c2c2c2"
                        android:textSize="13.3sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">
                        <EditText
                            android:id="@+id/txtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="11.7dp"
                            android:background="@android:color/transparent"
                            android:inputType="textPassword"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:paddingRight="44.3dp"
                            android:textColor="#000000"
                            android:textColorHint="#000000"
                            android:textCursorDrawable="@drawable/grey_cursor_color"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_marginTop="6.3dp"
                        android:layout_marginRight="44.3dp"
                        android:background="#d5d5d5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="17.3dp">

                        <TextView
                            android:id="@+id/lblError"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="50.3dp"
                            android:fontFamily="@font/poppins_regular"
                            android:text=""
                            android:textColor="#AE3232"
                            android:textSize="12.3sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16.3dp"
                        android:gravity="end"
                        android:paddingEnd="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/logTxtOlvidarClave"
                            android:textColor="#d5d5d5"
                            android:textSize="12.3sp" />


                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:paddingLeft="30dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/yellow_fb" />

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="29dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/yellow_linkedin" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="29dp"
                        android:layout_marginTop="50dp"
                        android:src="@drawable/yellow_twitter" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/btnLogear"
                        android:layout_width="40.7dp"
                        android:layout_height="30.3dp"
                        android:src="@drawable/black_arrow" />

                </LinearLayout>

            </LinearLayout>
        </FrameLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_horizontal"
                android:text="@string/logTxtDesCta"
                android:textColor="#ffffff"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/logTxtRegistrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/logTxtRegistrate"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="15sp" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>